# ai_10012300041

./: .env.example  DOCUMENTATION.docx  MANUAL_EXPERIMENT_LOGS.docx  RAG_Architecture.docx  pyproject.toml  requirements-rag.txt  requirements.txt  streamlit_app.py
outputs/part_a/: chunking_comparison.md  chunks_fixed_chars.jsonl  chunks_fixed_words.jsonl  chunks_paragraph_packed.jsonl  cleaned_budget_text.txt  cleaned_election_rows.csv
outputs/part_b/: PART_B_FAILURES_AND_FIX.md  chunks.pkl  faiss.index  index_meta.json  keyword_vectorizer.pkl  passage_embeddings.npy
outputs/part_c/: PART_C_EXPERIMENT_RESULTS.md  sample_prompt_v2_grounded.txt
outputs/part_g/: feedback.jsonl
src/academic_city/: __init__.py  constants.py  paths.py  text_utils.py
src/part_a/: __init__.py  part_a_data_engineering.py
src/part_b/: __init__.py  cross_encoder_rerank.py  retrieval_system.py  run_part_b.py
src/part_c/: __init__.py  context_pack.py  generation_backend.py  prompt_templates.py  run_experiments.py
src/part_d/: __init__.py  rag_pipeline.py
src/part_e/: __init__.py  adversarial_eval.py  pure_llm_baseline.py
src/part_g/: __init__.py  feedback_loop.py  record_feedback.py
tests/: test_smoke.py
